MDEV-11849: Fix storage/innobase/* compile warnings on Linux

cmake/lz4.cmake, fil0pagecompress.cc
LZ4_compress_limitedOutput was marked as deprecated on new
er lz4 release, use LZ4_compress_default if available instead

fsp0fsp.cc, handler0alter.cc, data0data.ic, dict0dict.ic
remove NULL pointer assertion check as functions were
marked as nonnull and compiler will remove the check anyway.

ha_innodb.cc: do not ignore return value of lock_trx_handle_wait().

dict0dict.h: remove definition of not implemented function
dict_tf_init()

os0file.cc: remove readdir_r as it is marked deprecated.