storage/innobase/handler/handler0alter.cc
@@ -5166,9 +5166,6 @@ innobase_check_foreign_key_index(
 	ulint			n_drop_fk)	/*!< in: Number of foreign keys
 						to drop */
 {
-	ut_ad(index != NULL);
-	ut_ad(indexed_table != NULL);
-
 	const dict_foreign_set*	fks = &indexed_table->referenced_set;
 
 	/* Check for all FK references from other tables to the index. */
